--- a/package.json
+++ b/package.json
@@ -21,14 +21,18 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/core": "^7.0.0",
+    "@nestjs/common": "^7.0.8",
+    "@nestjs/core": "^7.0.8",
+    "@nestjs/graphql": "^7.3.4",
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.0.0",
+    "apollo-server-express": "^2.12.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "dotenv": "^8.2.0",
+    "graphql": "^15.0.0",
+    "graphql-tools": "^5.0.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.0.2",
     "reflect-metadata": "^0.1.13",
